<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="judul_event">Your text here</string>
    <string name="title_name">Nama acara</string>
    <string name="detail_name">Your text here</string>
    <string name="title_ownername">Penyelenggara acara</string>
    <string name="detail_ownername">Your text here</string>
    <string name="title_begintime">Waktu acara</string>
    <string name="detail_begintime">Your text here</string>
    <string name="title_quota">Sisa kuota pendaftar</string>
    <string name="detail_quota">Your text here</string>
    <string name="title_description">Deskripsi acara</string>
    <string name="detail_description">Your text here</string>
    <string name="title_description_people">Jika Anda tertarik, silahkan daftar dengan menekan tombol daftar dibawah ini !</string>
    <string name="btn_link">Daftar</string>
    <string name="title_active_event">Active Events</string>
    <string name="title_Finished_event">Finished Events</string>
    <string name="title_image">Gambar</string>
    <string name="event_subtitle">Event Subtitle</string>
    <string name="quota_left">%d kuota tersisa</string>
    <string name="favorite_event">Favorite event</string>
    <string name="no_favorite_events">Tidak ada event favorite</string>
    <string name="dark_mode">Dark mode</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="event_start">Event %1$s akan dimulai pukul %2$s</string>
    <string name="profile_image">Profile</string>
    <string name="title_welcome">Hello Coders, \nWelcome to Dicoding</string>
</resources>