<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.aplikasidicodingevent.ui.home.HomeEventFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.aplikasidicodingevent.ui.upcoming.UpcomingEventFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.aplikasidicodingevent.ui.finished.FinishedEventFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.aplikasidicodingevent.ui.favorite.FavoriteEventFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.aplikasidicodingevent.ui.setting.SettingEventFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting"/>
</navigation>