<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="73dp"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="312dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome_message"
            android:layout_width="225dp"
            android:layout_height="59dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_welcome"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image"
            app:layout_constraintTop_toTopOf="@id/iv_profile_image" />


        <TextView
            android:id="@+id/tv_active_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/title_active_event"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_active_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_active_events" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_active_events" />

        <TextView
            android:id="@+id/tv_finished_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_Finished_event"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_active_events" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_finished_events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_finished_events" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>